obelisk_includedir = $(includedir)/obelisk
obelisk_include_HEADERS = \
    obelisk.hpp \
    message.hpp \
    zmq_message.hpp

obelisk_client_includedir = $(includedir)/obelisk/client
obelisk_client_include_HEADERS = \
    client/backend.hpp \
    client/interface.hpp \
    client/blockchain.hpp \
    client/protocol.hpp \
    client/transaction_pool.hpp

